# stm32nes

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  format.sh
C/: cpu.c  cpu.h  main.c  mapper.c  mapper.h
C/mappers/: mapper0.c  mapper0.h
Python/: cpu.py  main.py  mapper.py  memory.py
STM32/: STM32NES.elf.launch  STM32NES.ioc
STM32/Debug/: STM32NES.list
STM32/Inc/: ffconf.h  main.h  stm32f4xx_hal_conf.h  user_diskio_spi.h
STM32/Inc/NES/: cpu.h  mapper.h
STM32/Inc/NES/mappers/: mapper0.h
STM32/src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c  tiny_printf.c  user_diskio.c  user_diskio_spi.c
STM32/src/NES/: cpu.c  mapper.c
STM32/src/NES/mappers/: mapper0.c
src/: bitmask.h  cartridge.c  cartridge.h  cpu.c  cpu.h  main.c  mapper.c  mapper.h  memory.c  nes.c  nes.h  ppu.c  test.c  types.h
src/include/: bitmask.h  cartridge.h  cpu.h  log.h  memory.h  nes.h  ppu.h  types.h
src/include/mappers/: mapper0.h
src/mappers/: mapper0.c  mapper0.h
src/test/: test.c
test/: nestest.txt  test.c
